--- a/index.html
+++ b/index.html
@@ -1,20 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="styles.css"/>
+    <title>Free Feedback Software | Product Software | Feedback Tracking Software | Best App Idea Tracking System
+    </title>
+    <meta charset="UTF-8" />
+    <meta name="viewport"
+        content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <meta name="description"
+        content="Best feature request tracking software for tracking ideas, feedback, feature request, user support requests,language request tracking, product roadmapping, business reporting and much more. For customer experience managers, business owners and product managers. Free Online Idea Tracking for startups, business owners, customer experience managers and product managers">
+    <meta name="keywords"
+        content="Suelo, idea tracking software, feature request tracking system, online support request software, startup software, ideas app, idea tracking app, feature request software, best idea tracking software, feature request system, top idea tracking software, customer experience system, customer experience software, startup software, online feedback tracking, feature request software, system, feature notifications, online idea tracking, free, best, crm, free feature request system, free customer experience software, free customer experiene app, idea tracking app, feedback tracking app, idea software, uk, us, united states, united kingdom, australia, new zealand, south africa, ireland, best, feature calendar system, feature notifications, best new software">
+    <link rel="stylesheet" href="styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"/>
-    <title>Suelo.io</title>
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
 </head>
 
-<body>
-    <div class="container"></div>
+<body class="body">
+    <div class="container">
+        <img src="images/" alt="suelo logo">
+        <h4>ALL STARTUPS START HERE</h4>
         <h1>
-            Suelo.io
+            Totally organised feedback
         </h1>
+        <h4>
+            Suelo is the easiest place to collect, manage and present all product feedback.
+            Pre-registered now to use Suelo for a whole year FOR FREE!
+        </h4>
+
+        <input id="email-input" placeholder="Enter email address" type="text" autofocus="on" autofile="on">
+        <button> PRE-REGISTERD </button>
+        <img class="" src="images/" alt="product preview">
+
+        <p class='opinions-box__quote'>
+            "At last, a feature request software that actually works! I've been using the beta system and it's so easy
+            and clean to use. Thank you for revolutionising how team collect and process feedback with your fantastic
+            software. I have been using Suelo for the last month now and have found it incredible."
+        </p>
+        <p>
+            <strong>Frist name Last name, </strong>
+            Company name
+        </p>
+
+        <section class="listed features">
+            <div class='wrapper'>
+                <header class='section-header'>
+                    <h2 class='section-header__title'>Heaps Of Easy-To-Use Features</h2>
+                    <p class='section-header__subtitle'>All the great tools you need to track your client's feedback,
+                        feature requests and support requests!</p>
+                </header>
+                <ul class='features-list'>
+                    <li class='features-list__item'>
+                        <div class='features-list__image'>
+                            <img src="/images/1#.svg" alt="Best Feature Request Tracking Software App" />
+                        </div>
+                        <div class='features-list__description'>
+                            <h5 class='features-list__header'>
+                                Track Feature Requests
+                            </h5>
+                            <p class='features-list__content'>
+                                Suelo is a clean, simple tool with powerful feature request features that can handle all
+                                your client's ideas in one place. Features include Lorem ipsum dolor sit amet,
+                                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                aliqua apps.
+                            </p>
+                        </div>
+                    </li>
+                    <li class='features-list__item'>
+                        <div class='features-list__image'>
+                            <img src="/images/2#.svg"
+                                alt="Support Request Tracking software management and crm software" />
+                        </div>
+                        <div class='features-list__description'>
+                            <h5 class='features-list__header'>
+                                Support Request Tracking
+                            </h5>
+                            <p class='features-list__content'>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna
+                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                    </li>
+                    <li class='features-list__item clearfix'>
+                        <div class='features-list__image'>
+                            <img src="/images/3#.svg" alt="Salon and Spa software to reduce client No Shows" />
+                        </div>
+                        <div class='features-list__description'>
+                            <h5 class='features-list__header'>
+                                Language Request Tracking
+                            </h5>
+                            <p class='features-list__content'>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna
+                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                    </li>
+                    <li class='features-list__item'>
+                        <div class='features-list__image'>
+                            <img src="/images/4#.svg" alt="ideas, reports and dashboard" />
+                        </div>
+                        <div class='features-list__description'>
+                            <h5 class='features-list__header'>
+                                Activity Dashboard
+                            </h5>
+                            <p class='features-list__content'>
+                                Keep track of daily appointment scheduling activities and never miss a beat. The free
+                                dashboard
+                                displays up to date appointment bookings, online bookings, appointment cancelations and
+                                client
+                                notifications.
+                            </p>
+                        </div>
+                    </li>
+                    <li class='features-list__item clearfix'>
+                        <div class='features-list__image'>
+                            <img src="/images/5#.svg" alt="Product roadmapping software for smalls businesses" />
+                        </div>
+                        <div class='features-list__description'>
+                            <h5 class='features-list__header'>
+                                Product Roadmapping
+                            </h5>
+                            <p class='features-list__content'>
+                                Supercharge your ideas notice board with idea statuses so your customers can see exactly
+                                what is being working on,
+                                what has been completed and what is in the pipeline.
+
+                            </p>
+                        </div>
+                    </li>
+                    <li class='features-list__item'>
+                        <div class='features-list__image'>
+                            <img src="/images/6#.svg" alt="Client Notification software for start ups" />
+                        </div>
+                        <div class='features-list__description'>
+                            <h5 class='features-list__header'>
+                                Client Notifications
+                            </h5>
+                            <p class='features-list__content'>
+                                Notify users when features have gone live. Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris
+                                nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+                <div class='clearfix'></div>
+            </div>
+        </section>
+
+        <section>
+            <div class='testimony-row testimony-row--small'>
+                <div class='testimony-row__left'>
+                    <div class='testimony__bg testimony__bg--big'></div>
+                </div>
+                <div class='testimony-row__right'>
+                    <div class='testimony__inner testimony__inner--big'>
+                        <p class='testimony__quote testimony__quote--big'>
+                            ”We started using the beta version of Suelo from day one. It keeps our clients happy and
+                            we'd be lost without it”
+                        </p>
+                        <p class='testimony__sign testimony__sign--big'>
+                            <strong>Krystyna Coyle,</strong>
+                            SenseCheck.com
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <section>
+            <h4>
+                Suelo is the easiest place to collect, manage and present all product feedback.
+                Pre-registered now to use Suelo for a whole year FOR FREE!
+            </h4>
+            <input id="email-input" placeholder="Enter email address" type="text" autofocus="on" autofile="on">
+            <button> PRE-REGISTERD </button>
+        </section>
+
     </div>
-<script src="script.js"></script>     
+    <script src="script.js"></script>
 </body>
+
 </html>
