adding basic css

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <h1>
             Totally organised feedback
         </h1>
-        <h4>
+        <h5>
             Suelo is the easiest place to collect, manage and present all product feedback.
-            Pre-registered now to use Suelo for a whole year FOR FREE!
-        </h4>
+            Pre-registered now to use Suelo for a whole year for FREE!
+        </h5>
 
-        <input id="email-input" placeholder="Enter email address" type="text" autofocus="on" autofile="on">
-        <button> PRE-REGISTERD </button>
+        <input id="email-input" placeholder="Enter email address" type="text" autofocus="on" autofill="off">
+        <button> Pre-registered </button>
         <img class="" src="images/" alt="product preview">
 
         <p class='opinions-box__quote'>
@@ -48,6 +48,7 @@
                     <h2 class='section-header__title'>Heaps Of Easy-To-Use Features</h2>
                     <p class='section-header__subtitle'>All the great tools you need to track your client's feedback,
                         feature requests and support requests!</p>
+                        <hr>
                 </header>
                 <ul class='features-list'>
                     <li class='features-list__item'>
@@ -64,6 +65,7 @@
                                 consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                 aliqua apps.
                             </p>
+                            <hr>
                         </div>
                     </li>
                     <li class='features-list__item'>
@@ -81,6 +83,7 @@
                                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                                 aliquip ex ea commodo consequat.
                             </p>
+                            <hr>
                         </div>
                     </li>
                     <li class='features-list__item clearfix'>
@@ -97,6 +100,7 @@
                                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                                 aliquip ex ea commodo consequat.
                             </p>
+                            <hr>
                         </div>
                     </li>
                     <li class='features-list__item'>
@@ -114,6 +118,7 @@
                                 client
                                 notifications.
                             </p>
+                            <hr>
                         </div>
                     </li>
                     <li class='features-list__item clearfix'>
@@ -128,8 +133,8 @@
                                 Supercharge your ideas notice board with idea statuses so your customers can see exactly
                                 what is being working on,
                                 what has been completed and what is in the pipeline.
-
                             </p>
+                            <hr>
                         </div>
                     </li>
                     <li class='features-list__item'>
@@ -147,6 +152,7 @@
                                 nostrud exercitation ullamco laboris
                                 nisi ut aliquip ex ea commodo consequat.
                             </p>
+                            <hr>
                         </div>
                     </li>
                 </ul>
@@ -158,6 +164,7 @@
             <div class='testimony-row testimony-row--small'>
                 <div class='testimony-row__left'>
                     <div class='testimony__bg testimony__bg--big'></div>
+                    <img src="images/suelo_client.jpg" alt="user of best feature request tracking software" width="50%">
                 </div>
                 <div class='testimony-row__right'>
                     <div class='testimony__inner testimony__inner--big'>
@@ -169,18 +176,20 @@
                             <strong>Krystyna Coyle,</strong>
                             SenseCheck.com
                         </p>
+                    
                     </div>
 
                 </div>
             </div>
         </section>
+
         <section>
             <h4>
                 Suelo is the easiest place to collect, manage and present all product feedback.
-                Pre-registered now to use Suelo for a whole year FOR FREE!
+                Pre-registered now to use Suelo for a whole year for FREE!
             </h4>
-            <input id="email-input" placeholder="Enter email address" type="text" autofocus="on" autofile="on">
-            <button> PRE-REGISTERD </button>
+            <input id="email-input" placeholder="Enter email address" type="text" autofocus="off" autofill="off">
+            <button> Pre-registered </button>
         </section>
 
     </div>
