--- a/index.html
+++ b/index.html
@@ -12,24 +12,22 @@
     <meta name="keywords"
         content="Suelo, idea tracking software, feature request tracking system, online support request software, startup software, ideas app, idea tracking app, feature request software, best idea tracking software, feature request system, top idea tracking software, customer experience system, customer experience software, startup software, online feedback tracking, feature request software, system, feature notifications, online idea tracking, free, best, crm, free feature request system, free customer experience software, free customer experiene app, idea tracking app, feedback tracking app, idea software, uk, us, united states, united kingdom, australia, new zealand, south africa, ireland, best, feature calendar system, feature notifications, best new software">
     <link rel="stylesheet" href="styles.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
 </head>
 
 <body class="body">
-    <div class="container">
-        <img src="images/" alt="suelo logo">
-        <h4>ALL STARTUPS START HERE</h4>
+        <img src="images/" alt="suelo logo" class="suelo-logo">
+        <h2 class="subheading_top">All startups start here</h2>
         <h1>
             Totally organised feedback
         </h1>
-        <h5>
-            Suelo is the easiest place to collect, manage and present all product feedback.
-            Pre-registered now to use Suelo for a whole year for FREE!
-        </h5>
+        <p>
+            <div> Suelo is the easiest place to collect, manage and present all product feedback.</div>
+            <div>Pre-registered now to use Suelo for a whole year for FREE!</div>
+        </p>
 
         <input id="email-input" placeholder="Enter email address" type="text" autofocus="on" autofill="off">
         <button> Pre-registered </button>
+        <br />
         <img class="" src="images/" alt="product preview">
 
         <p class='opinions-box__quote'>
@@ -192,7 +190,6 @@
             <button> Pre-registered </button>
         </section>
 
-    </div>
     <script src="script.js"></script>
 </body>
 
