HTML organising and building css style sheet

--- a/index.html
+++ b/index.html
@@ -15,49 +15,42 @@
 </head>
 
 <body class="body">
-        <img src="images/" alt="suelo logo" class="suelo-logo">
+        <img src="images/Suelo_White 72dpi.png" alt="suelo logo" class="suelo_logo">
         <h2 class="subheading_top">All startups start here</h2>
         <h1>
             Totally organised feedback
         </h1>
         <p>
-            <div> Suelo is the easiest place to collect, manage and present all product feedback.</div>
+            <div>Suelo is the easiest place to collect, manage and present all product feedback.</div>
             <div>Pre-registered now to use Suelo for a whole year for FREE!</div>
         </p>
 
-        <input id="email-input" placeholder="Enter email address" type="text" autofocus="on" autofill="off">
+        <input id="email_input" placeholder="Enter email address" type="text" autofocus="on" autocomplete="off">
         <button> Pre-registered </button>
         <br />
-        <img class="" src="images/" alt="product preview">
+        <img class="hero_image" src="https://www.shedul.com/images/Shedul-best-Salon-software-platform-b2a8666d.jpg" alt="product preview" width="75%">
 
-        <p class='opinions-box__quote'>
-            "At last, a feature request software that actually works! I've been using the beta system and it's so easy
-            and clean to use. Thank you for revolutionising how team collect and process feedback with your fantastic
-            software. I have been using Suelo for the last month now and have found it incredible."
+        <p class="opinions-box_quote">
+            <div>"At last, a feature request software that actually works! I've been using the beta system and it's so easy</div>
+            <div>and clean to use. Thank you for revolutionising how team collect and process feedback with your fantastic</div>
+            <div>software. I have been using Suelo for the last month now and have found it incredible."</div>
         </p>
-        <p>
-            <strong>Frist name Last name, </strong>
-            Company name
+        <p class="opinions-box_name">
+            <div><strong>Alexander Kemp</strong></div>
+            <em>Sittee.co.uk</em>
         </p>
-
-        <section class="listed features">
-            <div class='wrapper'>
-                <header class='section-header'>
-                    <h2 class='section-header__title'>Heaps Of Easy-To-Use Features</h2>
-                    <p class='section-header__subtitle'>All the great tools you need to track your client's feedback,
-                        feature requests and support requests!</p>
-                        <hr>
-                </header>
-                <ul class='features-list'>
-                    <li class='features-list__item'>
-                        <div class='features-list__image'>
+     
+        <section class="features-list">
+                <ul>
+                    <li class="features-list_item">
+                        <div class="features-list_image">
                             <img src="/images/1#.svg" alt="Best Feature Request Tracking Software App" />
                         </div>
-                        <div class='features-list__description'>
-                            <h5 class='features-list__header'>
+                        <div class="features-list_description">
+                            <h2 class="features-list_header">
                                 Track Feature Requests
-                            </h5>
-                            <p class='features-list__content'>
+                            </h2>
+                            <p class="features-list_content">
                                 Suelo is a clean, simple tool with powerful feature request features that can handle all
                                 your client's ideas in one place. Features include Lorem ipsum dolor sit amet,
                                 consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -66,16 +59,16 @@
                             <hr>
                         </div>
                     </li>
-                    <li class='features-list__item'>
-                        <div class='features-list__image'>
+                    <li class="features-list_item">
+                        <div class="features-list_image">
                             <img src="/images/2#.svg"
                                 alt="Support Request Tracking software management and crm software" />
                         </div>
-                        <div class='features-list__description'>
-                            <h5 class='features-list__header'>
+                        <div class="features-list_description">
+                            <h2 class="features-list_header">
                                 Support Request Tracking
-                            </h5>
-                            <p class='features-list__content'>
+                            </h2>
+                            <p class="features-list_content">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut labore et dolore magna
                                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -84,15 +77,15 @@
                             <hr>
                         </div>
                     </li>
-                    <li class='features-list__item clearfix'>
-                        <div class='features-list__image'>
+                    <li class="features-list_item">
+                        <div class="features-list_image">
                             <img src="/images/3#.svg" alt="Salon and Spa software to reduce client No Shows" />
                         </div>
-                        <div class='features-list__description'>
-                            <h5 class='features-list__header'>
+                        <div class="features-list_description">
+                            <h2 class="features-list_header">
                                 Language Request Tracking
-                            </h5>
-                            <p class='features-list__content'>
+                            </h2>
+                            <p class="features-list_content">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut labore et dolore magna
                                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -101,15 +94,15 @@
                             <hr>
                         </div>
                     </li>
-                    <li class='features-list__item'>
-                        <div class='features-list__image'>
+                    <li class="features-list_item">
+                        <div class="features-list_image">
                             <img src="/images/4#.svg" alt="ideas, reports and dashboard" />
                         </div>
-                        <div class='features-list__description'>
-                            <h5 class='features-list__header'>
+                        <div class="features-list_description">
+                            <h2 class="features-list_header">
                                 Activity Dashboard
-                            </h5>
-                            <p class='features-list__content'>
+                            </h2>
+                            <p class="features-list_content">
                                 Keep track of daily appointment scheduling activities and never miss a beat. The free
                                 dashboard
                                 displays up to date appointment bookings, online bookings, appointment cancelations and
@@ -119,15 +112,15 @@
                             <hr>
                         </div>
                     </li>
-                    <li class='features-list__item clearfix'>
-                        <div class='features-list__image'>
+                    <li class="features-list_item">
+                        <div class="features-list_image">
                             <img src="/images/5#.svg" alt="Product roadmapping software for smalls businesses" />
                         </div>
-                        <div class='features-list__description'>
-                            <h5 class='features-list__header'>
+                        <div class="features-list_description">
+                            <h2 class="features-list_header">
                                 Product Roadmapping
-                            </h5>
-                            <p class='features-list__content'>
+                            </h2>
+                            <p class="features-list_content">
                                 Supercharge your ideas notice board with idea statuses so your customers can see exactly
                                 what is being working on,
                                 what has been completed and what is in the pipeline.
@@ -135,15 +128,15 @@
                             <hr>
                         </div>
                     </li>
-                    <li class='features-list__item'>
-                        <div class='features-list__image'>
+                    <li class="features-list_item">
+                        <div class="features-list_image">
                             <img src="/images/6#.svg" alt="Client Notification software for start ups" />
                         </div>
-                        <div class='features-list__description'>
-                            <h5 class='features-list__header'>
+                        <div class="features-list_description">
+                            <h2 class="features-list_header">
                                 Client Notifications
-                            </h5>
-                            <p class='features-list__content'>
+                            </h2>
+                            <p class="features-list_content">
                                 Notify users when features have gone live. Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit, sed do eiusmod
                                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
@@ -154,26 +147,22 @@
                         </div>
                     </li>
                 </ul>
-                <div class='clearfix'></div>
-            </div>
         </section>
 
         <section>
-            <div class='testimony-row testimony-row--small'>
-                <div class='testimony-row__left'>
-                    <div class='testimony__bg testimony__bg--big'></div>
+            <div class="testimony">
+                <div class="testimony_image">
                     <img src="images/suelo_client.jpg" alt="user of best feature request tracking software" width="50%">
                 </div>
-                <div class='testimony-row__right'>
-                    <div class='testimony__inner testimony__inner--big'>
-                        <p class='testimony__quote testimony__quote--big'>
-                            ”We started using the beta version of Suelo from day one. It keeps our clients happy and
-                            we'd be lost without it”
-                        </p>
-                        <p class='testimony__sign testimony__sign--big'>
+                <div class="testimony_text">
+                    <h1>
+                            "We started using the beta version of Suelo from day one. It keeps our clients happy and
+                            we'd be lost without it"
+                    </h1>
+                    <p class="testimony_sign">
                             <strong>Krystyna Coyle,</strong>
                             SenseCheck.com
-                        </p>
+                    </p>
                     
                     </div>
 
@@ -182,11 +171,11 @@
         </section>
 
         <section>
-            <h4>
+            <p>
                 Suelo is the easiest place to collect, manage and present all product feedback.
                 Pre-registered now to use Suelo for a whole year for FREE!
-            </h4>
-            <input id="email-input" placeholder="Enter email address" type="text" autofocus="off" autofill="off">
+            </p>
+            <input id="email-input" placeholder="Enter email address" type="text" autofocus="off" autocomplete="off">
             <button> Pre-registered </button>
         </section>
 
