--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
         content="Best feature request tracking software for tracking ideas, feedback, feature request, user support requests,language request tracking, product roadmapping, business reporting and much more. For customer experience managers, business owners and product managers. Free Online Idea Tracking for startups, business owners, customer experience managers and product managers">
     <meta name="keywords"
         content="Suelo, idea tracking software, feature request tracking system, online support request software, startup software, ideas app, idea tracking app, feature request software, best idea tracking software, feature request system, top idea tracking software, customer experience system, customer experience software, startup software, online feedback tracking, feature request software, system, feature notifications, online idea tracking, free, best, crm, free feature request system, free customer experience software, free customer experiene app, idea tracking app, feedback tracking app, idea software, uk, us, united states, united kingdom, australia, new zealand, south africa, ireland, best, feature calendar system, feature notifications, best new software">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap"
+            rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body class="body">
         <img src="images/Suelo_White 72dpi.png" alt="suelo logo" class="suelo_logo">
-        <h2 class="subheading_top">All startups start here</h2>
+        <h2 class="subheading_top">All  startups  start here</h2>
         <h1>
             Totally organised feedback
         </h1>
@@ -31,9 +34,9 @@
         <img class="hero_image" src="https://www.shedul.com/images/Shedul-best-Salon-software-platform-b2a8666d.jpg" alt="product preview" width="75%">
 
         <p class="opinions-box_quote">
-            <div>"At last, a feature request software that actually works! I've been using the beta system and it's so easy</div>
-            <div>and clean to use. Thank you for revolutionising how team collect and process feedback with your fantastic</div>
-            <div>software. I have been using Suelo for the last month now and have found it incredible."</div>
+            <div>"At last, a feature request software that actually works! I've been using the beta system and it's so easy
+            and clean to use. Thank you for revolutionising how team collect and process feedback with your fantastic
+            software. I have been using Suelo for the last month now and have found it incredible."</div>
         </p>
         <p class="opinions-box_name">
             <div><strong>Alexander Kemp</strong></div>
@@ -139,9 +142,7 @@
                             <p class="features-list_content">
                                 Notify users when features have gone live. Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                nostrud exercitation ullamco laboris
-                                nisi ut aliquip ex ea commodo consequat.
+                                tempor incididunt ut labore et dolore magna aliqua. 
                             </p>
                             <hr>
                         </div>
