Intro ccs flex + cleaning
removed excess wrapping and introduced ccs flex for features + cleaning excess code.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             Totally organised feedback
         </h1>
         <h3>
-            <div>Suelo is the easiest place to collect, manage and present all product feedback.</div>
-            <div>Pre-registered now to use Suelo for a whole year for FREE!</div>
+            <div>Suelo is the easiest place to collect, manage and present all product feedback.<br />
+            Pre-registered now to use Suelo for a whole year for FREE!</div>
         </h3>
 <form>
         <input id="email_input" ype="email" placeholder="Enter email address" t autofocus="on" autocomplete="off">
@@ -37,27 +37,21 @@
         <br />
         <img class="hero_image" src="https://www.shedul.com/images/Shedul-best-Salon-software-platform-b2a8666d.jpg" alt="product preview" width="75%">
 
-    <div class="opinions_wrapper">
-        <h3 class="opinions-box_quote">
+    <div class="opinion_wrapper">
+        <h3 class="opinion_quote">
             <div>"At last, a feature request software that actually works! I've been using the beta system and it's so easy
             and clean to use. Thank you for revolutionising how team collect and process feedback with your fantastic
             software. I have been using Suelo for the last month now and have found it incredible."</div>
             </h3>
-        <p class="opinions-box_name">
+        <p class="opinion_name">
             <div><h2>Alexander Kemp</h2></div>
             <em>Sittee.co.uk</em>
         </p>
     </div>
    
-    <div class="core_wrapper">
-    <section class="features-list">
-            <div class="features_wrapper">
-                <ul>
-                    <li class="features-list_item">
-                        <div class="features-list_image">
-                            <img src="/images/1#.svg" alt="Best Feature Request Tracking Software App" />
-                        </div>
-                        <div class="features-list_description">
+<div class="container">
+        <div class="container1">
+                    <div class="box-1">
                             <h2 class="features-list_header">
                                 Track Feature Requests
                             </h2>
@@ -68,14 +62,9 @@
                                 aliqua apps.
                             </p>
                             <hr>
-                        </div>
-                    </li>
-                    <li class="features-list_item">
-                        <div class="features-list_image">
-                            <img src="/images/2#.svg"
-                                alt="Support Request Tracking software management and crm software" />
-                        </div>
-                        <div class="features-list_description">
+                    </div>
+
+                    <div class="box-2">
                             <h2 class="features-list_header">
                                 Support Request Tracking
                             </h2>
@@ -86,13 +75,10 @@
                                 aliquip ex ea commodo consequat.
                             </p>
                             <hr>
-                        </div>
-                    </li>
-                    <li class="features-list_item">
-                        <div class="features-list_image">
-                            <img src="/images/3#.svg" alt="Salon and Spa software to reduce client No Shows" />
-                        </div>
-                        <div class="features-list_description">
+                    </div>
+        </div>
+    <div class="container2">
+                    <div class="box-3">
                             <h2 class="features-list_header">
                                 Language Request Tracking
                             </h2>
@@ -103,13 +89,8 @@
                                 aliquip ex ea commodo consequat.
                             </p>
                             <hr>
-                        </div>
-                    </li>
-                    <li class="features-list_item">
-                        <div class="features-list_image">
-                            <img src="/images/4#.svg" alt="ideas, reports and dashboard" />
-                        </div>
-                        <div class="features-list_description">
+                    </div>
+                    <div class="box-4">
                             <h2 class="features-list_header">
                                 Activity Dashboard
                             </h2>
@@ -121,13 +102,10 @@
                                 notifications.
                             </p>
                             <hr>
-                        </div>
-                    </li>
-                    <li class="features-list_item">
-                        <div class="features-list_image">
-                            <img src="/images/5#.svg" alt="Product roadmapping software for smalls businesses" />
-                        </div>
-                        <div class="features-list_description">
+                    </div>
+        </div>
+        <div class="container3">
+                        <div class="box-5">
                             <h2 class="features-list_header">
                                 Product Roadmapping
                             </h2>
@@ -138,12 +116,8 @@
                             </p>
                             <hr>
                         </div>
-                    </li>
-                    <li class="features-list_item">
-                        <div class="features-list_image">
-                            <img src="/images/6#.svg" alt="Client Notification software for start ups" />
-                        </div>
-                        <div class="features-list_description">
+
+                        <div class="box-6">
                             <h2 class="features-list_header">
                                 Client Notifications
                             </h2>
@@ -154,55 +128,48 @@
                             </p>
                             <hr>
                         </div>
-                    </li>
-                </ul>
-            </div>
-</section>
-<br />
 
-<section>
-    <div class="testimony-wrapper">
-        <div class="testimony">
-                <div class="testimony_image">
-                    <img class="testimony_image" src="images/suelo_client.jpg" alt="user of best feature request tracking software">
-                </div>
-                <div class="testimony_right">
-                    <h3 class="testimony_text">
-                            <strong>"We started using the beta version of Suelo from day one. It keeps our clients happy and
-                            we'd be lost without it"</strong>
-                    </h3>
-                    <p class="testimony_sign">
-                            <strong>Krystyna Coyle,</strong>
-                            SenseCheck.com
-                    </p>
-                </div>
         </div>
-    </div>
-</section>
+        <div class="container4">
+                    <div class="box-7">
+                            <div class="testimony_image">
+                                <img class="testimony_image" src="images/suelo_client.jpg" alt="user of best feature request tracking software">
+                            </div>
+                    </div>
 
+                    <div class="box-8">
+                            <h3 class="testimony_qoute">
+                                <strong>"We started using the beta version of Suelo from day one. It keeps our clients happy and
+                                        we'd be lost without it"</strong>
+                            </h3>
+                            <p class="testimony_name">
+                                        <strong>Krystyna Coyle,</strong>
+                                        SenseCheck.com
+                            </p>
+                    </div>
+        </div>
 
-                <section>
                 <div class="bottom_call-to-action_wrapper">
                     <h3>
-                        <div>Suelo is the easiest place to collect, manage and present all product feedback.</div>
-                        <div>Pre-registered now to use Suelo for a whole year for FREE!</div>
+                        <div>Suelo is the easiest place to collect, manage and present all product feedback.<br />
+                       Pre-registered now to use Suelo for a whole year for FREE!</div>
                     </h3>
                         <form>
                             <input id="email_input" ype="email" placeholder="Enter email address" t autofocus="on" autocomplete="off">
                             <button type="submit">Pre-registered</button>
                         </form>
                 </div>
-                </section>
+
 </div>
         <footer class='main-footer'>
                     <div class='main-footer_left'>
                         <img class="bottom_logo" src="images/Suelo_White 72dpi.png" class="main-footer__logo" alt="Suelo.io Software logo" href="https://suelo.io"/>
                     </div>
                     <div class='main-footer_middle'>
-                        © 2021 Smelly Ventures Inc.
+                    © 2021 Smelly Ventures Inc.
                     </div>
      
-    </footer>
+        </footer>
 
     <script src="script.js"></script>
 </body>
