Almost fixed css flex image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                 aliqua apps.
                             </p>
-                            <hr>
+                        <hr>
                     </div>
 
                     <div class="box-2">
@@ -130,6 +130,7 @@
                         </div>
 
         </div>
+</div>
         <div class="container4">
                     <div class="box-7">
                             <div class="testimony_image">
@@ -148,7 +149,7 @@
                             </p>
                     </div>
         </div>
-
+<div class="container">
                 <div class="bottom_call-to-action_wrapper">
                     <h3>
                         <div>Suelo is the easiest place to collect, manage and present all product feedback.<br />
