--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                 aliqua apps.
                             </p>
-                        <hr>
+                            <hr>
                     </div>
 
                     <div class="box-2">
@@ -77,6 +77,7 @@
                             <hr>
                     </div>
         </div>
+
     <div class="container2">
                     <div class="box-3">
                             <h2 class="features-list_header">
@@ -90,6 +91,7 @@
                             </p>
                             <hr>
                     </div>
+
                     <div class="box-4">
                             <h2 class="features-list_header">
                                 Activity Dashboard
@@ -104,6 +106,7 @@
                             <hr>
                     </div>
         </div>
+
         <div class="container3">
                         <div class="box-5">
                             <h2 class="features-list_header">
@@ -114,7 +117,6 @@
                                 what is being working on,
                                 what has been completed and what is in the pipeline.
                             </p>
-                            <hr>
                         </div>
 
                         <div class="box-6">
@@ -126,10 +128,10 @@
                                 adipiscing elit, sed do eiusmod
                                 tempor incididunt ut labore et dolore magna aliqua. 
                             </p>
-                            <hr>
                         </div>
 
         </div>
+<hr>
 </div>
         <div class="container4">
                     <div class="box-7">
@@ -150,7 +152,7 @@
                     </div>
         </div>
 <div class="container">
-                <div class="bottom_call-to-action_wrapper">
+                <div class="footer_call-to-action">
                     <h3>
                         <div>Suelo is the easiest place to collect, manage and present all product feedback.<br />
                        Pre-registered now to use Suelo for a whole year for FREE!</div>
