Settled on testimony image css flex

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
    
 <div class="container">
-        <div class="container1">
+        <div class="box-container">
                     <div class="box-1">
                             <h2 class="features-list_header">
                                 Track Feature Requests
@@ -78,7 +78,7 @@
                     </div>
         </div>
 
-    <div class="container2">
+    <div class="box-container">
                     <div class="box-3">
                             <h2 class="features-list_header">
                                 Language Request Tracking
@@ -107,7 +107,7 @@
                     </div>
         </div>
 
-        <div class="container3">
+        <div class="box-container">
                         <div class="box-5">
                             <h2 class="features-list_header">
                                 Product Roadmapping
